<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/login_shape"
        android:orientation="vertical"
        android:scrollbars="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimens_15dp"
            android:text="@string/prompt"
            android:textColor="@color/F333333"
            android:textSize="@dimen/dimens_15sp" />

        <RelativeLayout
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/dimens_12dp"
            android:layout_marginTop="@dimen/dimens_12dp"
            android:minHeight="40dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/message_tip"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/exit_app"
                android:textColor="@color/F333333"
                android:textSize="@dimen/dimens_15sp" />
        </RelativeLayout>

        <View style="@style/DividerH"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="@dimen/dimens_39dp"
                android:layout_weight="1"
                android:background="@drawable/left_btn_select"
                android:text="@string/cancel"
                android:textSize="@dimen/dimens_14sp"
                android:textColor="@color/btntextcolor" />

            <LinearLayout
                android:id="@+id/single_line"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#D1D1D1"
                android:orientation="horizontal" />

            <Button
                android:id="@+id/neutral_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/left_btn_select"
                android:text="@string/dismiss"
                android:minHeight="@dimen/dimens_39dp"
                android:textSize="@dimen/dimens_14sp"
                android:textColor="@color/btntextcolor" />

            <LinearLayout
                android:id="@+id/second_line"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#D1D1D1"
                android:orientation="horizontal" />

            <Button
                android:id="@+id/confirm_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/right_btn_select"
                android:text="@string/confirm"
                android:minHeight="@dimen/dimens_39dp"
                android:textSize="@dimen/dimens_14sp"
                android:textColor="@color/btntextcolor" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>